chore(config): add simple .gitignore to ignore node_modules and .env

--- a/server-modelo/.env
+++ b/server-modelo/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://leonardo0294:wdwPqZxDPHKyc5jp@cluster0.o1znu.mongodb.net/db?retryWrites=true&w=majority&appName=Cluster0
+PORT=4000
